small undates to fix the search bar on mobile and to hide the pagination controls when no results exist

--- a/show-stoppers-spa/src/app/features/search-view/search-view.component.scss
+++ b/show-stoppers-spa/src/app/features/search-view/search-view.component.scss
@@ -24,3 +24,10 @@
         }
     }
 }
+
+
+@media only screen and (max-width: 700px) {
+    .search-bar-item{
+        width: unset;
+    }
+}
